# pytonconnect

./: .flake8  Makefile  README.md  pytonconnect-manifest.json  requirements.txt  setup.cfg
examples/: check_proof.py  requirements.txt  simple.py  transaction.py  wait_connection.py
pytonconnect/: __init__.py  _ton_connect.py  _wallets_list_manager.py  exceptions.py  logger.py  ton_connect.py
pytonconnect/crypto/: __init__.py  _session_crypto.py
pytonconnect/parsers/: __init__.py  _connect_event.py  _rpc_parser.py  _send_transaction.py  rpc_parser.py  send_transaction.py
pytonconnect/provider/: __init__.py  _bridge_gateway.py  _bridge_provider.py  _bridge_session.py  _bridge_storage.py  _provider.py  bridge_gateway.py  bridge_provider.py
pytonconnect/storage/: __init__.py  _default_storage.py  _file_storage.py  _interface.py  default_storage.py  interface.py
