[metadata]
name = pytonconnect
version = 0.3.0
description = Python SDK for TON Connect 2.0
long_description = file: README.md
long_description_content_type = text/markdown
keywords = TON, TON Connect, TON Connect SDK
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
author = XaBbl4
author_email = xabbl4@gmail.com
project_urls =
    Github = https://github.com/XaBbl4/pytonconnect

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pynacl>=1.5.0
    httpx>=0.25.1
    httpx-sse>=0.3.1

[options.packages.find]
exclude =
    examples*
    devtools*
    docs*
    tests*
    venv*
